fix: spacing and positioning

--- a/src/layouts/MainLayout/styles.module.css
+++ b/src/layouts/MainLayout/styles.module.css
@@ -1,5 +1,5 @@
 .mainLayout{
-    width: 100vw;
+    width: 100%;
     height: 100%;
     bottom:0;
     left:0;
