--- a/src/shared/components/Header/styles.module.css
+++ b/src/shared/components/Header/styles.module.css
@@ -1,11 +1,6 @@
 .header {
-    width: 100vw;
+    width: 100%;
     height: calc(100vh + 20px);
-    /* background-image: url("/images/banner_01.png");
-    background-position: 0;
-    background-color: transparent;
-    background-size: cover;
-    background-attachment: fixed; */
     position: relative;
     color: #FFF;
 }
@@ -24,8 +19,6 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    margin-left: auto;
-    margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
 }
