--- a/src/shared/components/MyWorks/styles.module.css
+++ b/src/shared/components/MyWorks/styles.module.css
@@ -1,4 +1,4 @@
-.aboutMe {
+.myWorks {
     position: relative;
     padding: 4em 160px;
     margin-right: auto;
